[package]
name = "swayidle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
futures = { version = "0.3.29", features = ["compat"] }
futures-channel = "0.3.29"
futures-util = { version = "0.3.29", features = ["futures-channel"] }
inotify = "0.10.2"
log = "0.4.20"
mlua = { version = "0.9.1", features = ["async", "luau", "send"] }
sysinfo = "0.29.10"
tokio = { version = "1.32.0", features = ["rt", "macros", "process", "rt-multi-thread"] }
uuid = { version = "1.5.0", features = ["fast-rng", "v4"] }
wayland-client = "0.31.1"
wayland-protocols = { version = "0.31.0", features = ["client", "staging"] }
xdg = "2.5.2"
zbus = { version = "3.14.1", features = ["tokio"] }
