[package]
name = "sleepwatcher-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = "1.18.0"
chrono = "0.4.38"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
evdev = { version = "0.12.2", features = ["tokio"] }
futures = { version = "0.3.29", features = ["compat"] }
inotify = "0.10.2"
lazy_static = "1.5.0"
log = "0.4.20"
mlua = { version = "0.9.1", features = ["async", "luau", "send"] }
nix = { version = "0.29.0", features = ["fs", "poll", "signal", "time"] }
once_cell = "1.18.0"
parking_lot = "0.12.1"
shmemfdrs2 = "1.0.0"
sysinfo = "0.29.10"
tokio = { version = "1.41.0", features = ["rt", "macros", "process", "rt-multi-thread", "mio", "signal"] }
tokio-timer = "0.2.13"
tokio-udev = "0.9.1"
udev = "0.9.0"
uuid = { version = "1.5.0", features = ["fast-rng", "v4"] }
wayland-client = { version = "0.31.7", features = ["log"] }
wayland-protocols = { version = "0.32.5", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
xdg = "2.5.2"
zbus = { version = "3.14.1", features = ["tokio"] }
